GNOME Bugzilla – Bug 666066
Crash everytime I start rhythmbox
Last modified: 2012-03-27 21:17:21 UTC
Every time I try to start rhythmbox-2.90.1-17.git20110927.fc16.i686 on Fedora 16 it crashes silently for the first time. The second time always works. $:andre\> gdb rhythmbox GNU gdb (GDB) Fedora (7.3.50.20110722-10.fc16) Copyright (C) 2011 Free Software Foundation, Inc. License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html> This is free software: you are free to change and redistribute it. There is NO WARRANTY, to the extent permitted by law. Type "show copying" and "show warranty" for details. This GDB was configured as "i686-redhat-linux-gnu". For bug reporting instructions, please see: <http://www.gnu.org/software/gdb/bugs/>... Reading symbols from /usr/bin/rhythmbox...Reading symbols from /usr/lib/debug/usr/bin/rhythmbox.debug...done. done. (gdb) run Starting program: /usr/bin/rhythmbox [Thread debugging using libthread_db enabled] Using host libthread_db library "/lib/libthread_db.so.1". warning: "/usr/lib/debug/usr/lib/libicudata.so.46.0.debug": separate debug info file has no debug info [New Thread 0xb7d85b40 (LWP 2698)] [New Thread 0xb73ffb40 (LWP 2699)] [New Thread 0xb1caeb40 (LWP 2700)] [Thread 0xb1caeb40 (LWP 2700) exited] [New Thread 0xb1caeb40 (LWP 2702)] [New Thread 0xb2a89b40 (LWP 2703)] [Thread 0xb2a89b40 (LWP 2703) exited] [New Thread 0xb2a89b40 (LWP 2704)] *** glibc detected *** /usr/bin/rhythmbox: malloc(): memory corruption (fast): 0x08c11dc8 *** ======= Backtrace: ========= /lib/libc.so.6[0x4e945d22] /lib/libc.so.6[0x4e948486] /lib/libc.so.6(__libc_malloc+0x65)[0x4e949e95] /lib/libglib-2.0.so.0[0x4eb7dc3c] /lib/libglib-2.0.so.0(g_malloc+0x31)[0x4eb7e1b1] /usr/lib/librhythmbox-core.so.4(rb_refstring_new+0x97)[0x415ac4b7] /usr/lib/librhythmbox-core.so.4(rhythmdb_entry_set_internal+0xadc)[0x415b3eec] /usr/lib/librhythmbox-core.so.4[0x415c8be0] /usr/lib/libxml2.so.2[0x4f0408c2] /usr/lib/libxml2.so.2(xmlParseElement+0x32b)[0x4f04a22b] /usr/lib/libxml2.so.2(xmlParseContent+0x140)[0x4f048ec0] /usr/lib/libxml2.so.2(xmlParseElement+0x144)[0x4f04a044] /usr/lib/libxml2.so.2(xmlParseContent+0x140)[0x4f048ec0] /usr/lib/libxml2.so.2(xmlParseElement+0x144)[0x4f04a044] /usr/lib/libxml2.so.2(xmlParseDocument+0x252)[0x4f04b072] /usr/lib/librhythmbox-core.so.4[0x415cba64] /usr/lib/librhythmbox-core.so.4[0x415ad3f2] /lib/libglib-2.0.so.0[0x4eb9eed5] /lib/libpthread.so.0[0x4ea84cd3] /lib/libc.so.6(clone+0x5e)[0x4e9c251e] ======= Memory map: ======== 00110000-00111000 r-xp 00000000 00:00 0 [vdso] 00111000-0011c000 r-xp 00000000 fd:00 752932 /lib/libnss_files-2.14.90.so 0011c000-0011d000 r--p 0000a000 fd:00 752932 /lib/libnss_files-2.14.90.so 0011d000-0011e000 rw-p 0000b000 fd:00 752932 /lib/libnss_files-2.14.90.so 0011e000-00148000 r-xp 00000000 fd:00 1049660 /usr/lib/gio/modules/libgvfsdbus.so 00148000-00149000 r--p 00029000 fd:00 1049660 /usr/lib/gio/modules/libgvfsdbus.so 00149000-0014a000 rw-p 0002a000 fd:00 1049660 /usr/lib/gio/modules/libgvfsdbus.so 0014a000-00160000 r-xp 00000000 fd:00 592363 /usr/lib/libgvfscommon.so.0.0.0 00160000-00161000 r--p 00015000 fd:00 592363 /usr/lib/libgvfscommon.so.0.0.0 00161000-00162000 rw-p 00016000 fd:00 592363 /usr/lib/libgvfscommon.so.0.0.0 00162000-0018d000 r-xp 00000000 fd:00 592362 /usr/lib/libbluray.so.0.0.0 0018d000-0018e000 r--p 0002b000 fd:00 592362 /usr/lib/libbluray.so.0.0.0 0018e000-0018f000 rw-p 0002c000 fd:00 592362 /usr/lib/libbluray.so.0.0.0 0018f000-00194000 r-xp 00000000 fd:00 1180119 /usr/lib/gtk-3.0/3.0.0/theming-engines/libadwaita.so 00194000-00195000 r--p 00004000 fd:00 1180119 /usr/lib/gtk-3.0/3.0.0/theming-engines/libadwaita.so 00195000-00196000 rw-p 00005000 fd:00 1180119 /usr/lib/gtk-3.0/3.0.0/theming-engines/libadwaita.so 00196000-001d0000 r-xp 00000000 fd:00 592330 /usr/lib/libcroco-0.6.so.3.0.1 001d0000-001d3000 rw-p 00039000 fd:00 592330 /usr/lib/libcroco-0.6.so.3.0.1 001d3000-001d4000 r-xp 00000000 fd:00 1049200 /usr/lib/gdk-pixbuf-2.0/2.10.0/loaders/libpixbufloader-svg.so 001d4000-001d5000 r--p 00001000 fd:00 1049200 /usr/lib/gdk-pixbuf-2.0/2.10.0/loaders/libpixbufloader-svg.so 001d5000-001d6000 rw-p 00002000 fd:00 1049200 /usr/lib/gdk-pixbuf-2.0/2.10.0/loaders/libpixbufloader-svg.so 001d6000-001d8000 r-xp 00000000 fd:00 1163838 /usr/lib/gtk-3.0/modules/libpk-gtk-module.so 001d8000-001d9000 r--p 00002000 fd:00 1163838 /usr/lib/gtk-3.0/modules/libpk-gtk-module.so 001d9000-001da000 rw-p 00003000 fd:00 1163838 /usr/lib/gtk-3.0/modules/libpk-gtk-module.so 001da000-00203000 r-xp 00000000 fd:00 1163613 /usr/lib/gtk-3.0/modules/libatk-bridge.so 00203000-00204000 r--p 00028000 fd:00 1163613 /usr/lib/gtk-3.0/modules/libatk-bridge.so 00204000-00205000 rw-p 00029000 fd:00 1163613 /usr/lib/gtk-3.0/modules/libatk-bridge.so 00205000-00206000 rw-p 00000000 00:00 0 00206000-00228000 r-xp 00000000 fd:00 589219 /usr/lib/libatspi.so.0.0.1 00228000-00229000 r--p 00021000 fd:00 589219 /usr/lib/libatspi.so.0.0.1 00229000-0022a000 rw-p 00022000 fd:00 589219 /usr/lib/libatspi.so.0.0.1 0022a000-0022f000 r-xp 00000000 fd:00 1163654 /usr/lib/gtk-3.0/modules/libcanberra-gtk3-module.so 0022f000-00230000 r--p 00004000 fd:00 1163654 /usr/lib/gtk-3.0/modules/libcanberra-gtk3-module.so 00230000-00231000 rw-p 00005000 fd:00 1163654 /usr/lib/gtk-3.0/modules/libcanberra-gtk3-module.so 00231000-00235000 r-xp 00000000 fd:00 592297 /usr/lib/libcanberra-gtk3.so.0.1.8 00235000-00236000 r--p 00003000 fd:00 592297 /usr/lib/libcanberra-gtk3.so.0.1.8 00236000-00237000 rw-p 00004000 fd:00 592297 /usr/lib/libcanberra-gtk3.so.0.1.8 00237000-00261000 r-xp 00000000 fd:00 592275 /usr/lib/libvorbis.so.0.4.5 00261000-00262000 rw-p 00029000 fd:00 592275 /usr/lib/libvorbis.so.0.4.5 00262000-00269000 r-xp 00000000 fd:00 1049132 /usr/lib/gio/modules/libdconfsettings.so 00269000-0026a000 r--p 00006000 fd:00 1049132 /usr/lib/gio/modules/libdconfsettings.so 0026a000-0026b000 rw-p 00007000 fd:00 1049132 /usr/lib/gio/modules/libdconfsettings.so 0026b000-0027e000 r-xp 00000000 fd:00 1049659 /usr/lib/gio/modules/libgioremote-volume-monitor.so 0027e000-0027f000 r--p 00012000 fd:00 1049659 /usr/lib/gio/modules/libgioremote-volume-monitor.so 0027f000-00280000 rw-p 00013000 fd:00 1049659 /usr/lib/gio/modules/libgioremote-volume-monitor.so 00280000-00282000 r-xp 00000000 fd:00 588913 /usr/lib/libpeas-1.0/loaders/libcloader.so 00282000-00283000 r--p 00001000 fd:00 588913 /usr/lib/libpeas-1.0/loaders/libcloader.so 00283000-00284000 rw-p 00002000 fd:00 588913 /usr/lib/libpeas-1.0/loaders/libcloader.so 00284000-0028e000 r-xp 00000000 fd:00 615775 /usr/lib/rhythmbox/plugins/iradio/libiradio.so 0028e000-0028f000 r--p 00009000 fd:00 615775 /usr/lib/rhythmbox/plugins/iradio/libiradio.so 0028f000-00290000 rw-p 0000a000 fd:00 615775 /usr/lib/rhythmbox/plugins/iradio/libiradio.so 00290000-002a3000 r-xp 00000000 fd:00 615802 /usr/lib/rhythmbox/plugins/mtpdevice/libmtpdevice.so 002a3000-002a4000 r--p 00012000 fd:00 615802 /usr/lib/rhythmbox/plugins/mtpdevice/libmtpdevice.so 002a4000-002a5000 rw-p 00013000 fd:00 615802 /usr/lib/rhythmbox/plugins/mtpdevice/libmtpdevice.so 002a5000-002b3000 r-xp 00000000 fd:00 755674 /lib/libusb-1.0.so.0.1.0 002b3000-002b4000 r--p 0000d000 fd:00 755674 /lib/libusb-1.0.so.0.1.0 002b4000-002b5000 rw-p 0000e000 fd:00 755674 /lib/libusb-1.0.so.0.1.0 002b5000-002b9000 r-xp 00000000 fd:00 615796 /usr/lib/rhythmbox/plugins/mmkeys/libmmkeys.so 002b9000-002ba000 r--p 00003000 fd:00 615796 /usr/lib/rhythmbox/plugins/mmkeys/libmmkeys.so 002ba000-002bb000 rw-p 00004000 fd:00 615796 /usr/lib/rhythmbox/plugins/mmkeys/libmmkeys.so 002bb000-002c6000 r-xp 00000000 fd:00 615757 /usr/lib/rhythmbox/plugins/dbus-media-server/libdbus-media-server.so 002c6000-002c7000 r--p 0000b000 fd:00 615757 /usr/lib/rhythmbox/plugins/dbus-media-server/libdbus-media-server.so 002c7000-002c8000 rw-p 0000c000 fd:00 615757 /usr/lib/rhythmbox/plugins/dbus-media-server/libdbus-media-server.so 002c8000-002de000 r-xp 00000000 fd:00 615754 /usr/lib/rhythmbox/plugins/daap/libdaap.so 002de000-002df000 r--p 00015000 fd:00 615754 /usr/lib/rhythmbox/plugins/daap/libdaap.so 002df000-002e0000 rw-p 00016000 fd:00 615754 /usr/lib/rhythmbox/plugins/daap/libdaap.so 002e0000-00309000 r-xp 00000000 fd:00 589758 /usr/lib/libdmapsharing-3.0.so.2.9.12 00309000-0030b000 r--p 00028000 fd:00 589758 /usr/lib/libdmapsharing-3.0.so.2.9.12 0030b000-0030c000 rw-p 0002a000 fd:00 589758 /usr/lib/libdmapsharing-3.0.so.2.9.12 0030c000-00314000 rw-p 00000000 00:00 0 00314000-00320000 r-xp 00000000 fd:00 996458 /usr/lib/libavahi-common.so.3.5.3 00320000-00321000 r--p 0000b000 fd:00 996458 /usr/lib/libavahi-common.so.3.5.3 00321000-00322000 rw-p 0000c000 fd:00 996458 /usr/lib/libavahi-common.so.3.5.3 00322000-00325000 r-xp 00000000 fd:00 997191 /usr/lib/libavahi-glib.so.1.0.2 00325000-00326000 r--p 00002000 fd:00 997191 /usr/lib/libavahi-glib.so.1.0.2 00326000-00327000 rw-p 00003000 fd:00 997191 /usr/lib/libavahi-glib.so.1.0.2 00327000-0032c000 r-xp 00000000 fd:00 615742 /usr/lib/rhythmbox/plugins/cd-recorder/libcd-recorder.so 0032c000-0032d000 r--p 00004000 fd:00 615742 /usr/lib/rhythmbox/plugins/cd-recorder/libcd-recorder.so 0032d000-0032e000 rw-p 00005000 fd:00 615742 /usr/lib/rhythmbox/plugins/cd-recorder/libcd-recorder.so 0032e000-00353000 r-xp 00000000 fd:00 589816 /usr/lib/libbrasero-media3.so.1.2.0 00353000-00354000 r--p 00024000 fd:00 589816 /usr/lib/libbrasero-media3.so.1.2.0 00354000-00355000 rw-p 00025000 fd:00 589816 /usr/lib/libbrasero-media3.so.1.2.0 00355000-00362000 r-xp 00000000 fd:00 615763 /usr/lib/rhythmbox/plugins/generic-player/libgeneric-player.so 00362000-00363000 r--p 0000c000 fd:00 615763 /usr/lib/rhythmbox/plugins/generic-player/libgeneric-player.so 00363000-00364000 rw-p 0000d000 fd:00 615763 /usr/lib/rhythmbox/plugins/generic-player/libgeneric-player.so 00364000-00374000 r-xp 00000000 fd:00 615736 /usr/lib/rhythmbox/plugins/audiocd/libaudiocd.so 00374000-00375000 r--p 00010000 fd:00 615736 /usr/lib/rhythmbox/plugins/audiocd/libaudiocd.so 00375000-00376000 rw-p 00011000 fd:00 615736 /usr/lib/rhythmbox/plugins/audiocd/libaudiocd.so 00376000-0037f000 r-xp 00000000 fd:00 996889 /usr/lib/libgstcdda-0.10.so.0.24.0 0037f000-00380000 r--p 00008000 fd:00 996889 /usr/lib/libgstcdda-0.10.so.0.24.0 00380000-00381000 rw-p 00009000 fd:00 996889 /usr/lib/libgstcdda-0.10.so.0.24.0 00381000-003e2000 r-xp 00000000 fd:00 592345 /usr/lib/libmusicbrainz3.so.6.3.0 003e2000-003e5000 rw-p 00061000 fd:00 592345 /usr/lib/libmusicbrainz3.so.6.3.0 003e5000-00412000 r-xp 00000000 fd:00 592258 /usr/lib/libgconf-2.so.4.1.5 00412000-00413000 ---p 0002d000 fd:00 592258 /usr/lib/libgconf-2.so.4.1.5 00413000-00414000 r--p 0002d000 fd:00 592258 /usr/lib/libgconf-2.so.4.1.5 00414000-00415000 rw-p 0002e000 fd:00 592258 /usr/lib/libgconf-2.so.4.1.5 00415000-0043e000 r-xp 00000000 fd:00 592343 /usr/lib/libneon.so.27.2.6 0043e000-0043f000 rw-p 00028000 fd:00 592343 /usr/lib/libneon.so.27.2.6 0043f000-00443000 r-xp 00000000 fd:00 592344 /usr/lib/libdiscid.so.0.2.1 00443000-00444000 rw-p 00003000 fd:00 592344 /usr/lib/libdiscid.so.0.2.1 00444000-00502000 r-xp 00000000 fd:00 592230 /usr/lib/libgnutls.so.26.21.1 00502000-00507000 rw-p 000bd000 fd:00 592230 /usr/lib/libgnutls.so.26.21.1 00507000-0050d000 r-xp 00000000 fd:00 996313 /usr/lib/libpakchois.so.0.1.0 0050d000-0050e000 rw-p 00005000 fd:00 996313 /usr/lib/libpakchois.so.0.1.0 0050e000-0052c000 r-xp 00000000 fd:00 592342 /usr/lib/libproxy.so.1.0.0 0052c000-0052d000 rw-p 0001e000 fd:00 592342 /usr/lib/libproxy.so.1.0.0 0052d000-0053d000 r-xp 00000000 fd:00 592229 /usr/lib/libtasn1.so.3.1.9 0053d000-0053e000 rw-p 0000f000 fd:00 592229 /usr/lib/libtasn1.so.3.1.9 0053e000-00545000 r-xp 00000000 fd:00 592341 /usr/lib/libmodman.so.1.0.0 00545000-00546000 rw-p 00006000 fd:00 592341 /usr/lib/libmodman.so.1.0.0 00546000-0054f000 r-xp 00000000 fd:00 615799 /usr/lib/rhythmbox/plugins/mpris/libmpris.so 0054f000-00550000 r--p 00009000 fd:00 615799 /usr/lib/rhythmbox/plugins/mpris/libmpris.so 00550000-00551000 rw-p 0000a000 fd:00 615799 /usr/lib/rhythmbox/plugins/mpris/libmpris.so 00551000-00555000 r-xp 00000000 fd:00 615805 /usr/lib/rhythmbox/plugins/notification/libnotification.so 00555000-00556000 r--p 00003000 fd:00 615805 /usr/lib/rhythmbox/plugins/notification/libnotification.so 00556000-00557000 rw-p 00004000 fd:00 615805 /usr/lib/rhythmbox/plugins/notification/libnotification.so 00557000-0055a000 r-xp 00000000 fd:00 615808 /usr/lib/rhythmbox/plugins/power-manager/libpower-manager.so 0055a000-0055b000 r--p 00002000 fd:00 615808 /usr/lib/rhythmbox/plugins/power-manager/libpower-manager.so 0055b000-0055c000 rw-p 00003000 fd:00 615808 /usr/lib/rhythmbox/plugins/power-manager/libpower-manager.so 0055c000-0056f000 r-xp 00000000 fd:00 615772 /usr/lib/rhythmbox/plugins/ipod/libipod.so 0056f000-00570000 r--p 00012000 fd:00 615772 /usr/lib/rhythmbox/plugins/ipod/libipod.so 00570000-00571000 rw-p 00013000 fd:00 615772 /usr/lib/rhythmbox/plugins/ipod/libipod.so 00571000-005dd000 r-xp 00000000 fd:00 591921 /usr/lib/libgpod.so.4.3.2 005dd000-005de000 ---p 0006c000 fd:00 591921 /usr/lib/libgpod.so.4.3.2 005de000-005e2000 r--p 0006c000 fd:00 591921 /usr/lib/libgpod.so.4.3.2 005e2000-005e3000 rw-p 00070000 fd:00 591921 /usr/lib/libgpod.so.4.3.2 005e3000-005e4000 rw-p 00000000 00:00 0 005e4000-00600000 r-xp 00000000 fd:00 592370 /usr/lib/libimobiledevice.so.2.0.1 00600000-00601000 rw-p 0001b000 fd:00 592370 /usr/lib/libimobiledevice.so.2.0.1 00601000-00609000 r-xp 00000000 fd:00 995357 /usr/lib/libplist.so.1.1.3 00609000-0060a000 rw-p 00007000 fd:00 995357 /usr/lib/libplist.so.1.1.3 0060a000-0060e000 r-xp 00000000 fd:00 592369 /usr/lib/libusbmuxd.so.1.0.7 0060e000-0060f000 rw-p 00004000 fd:00 592369 /usr/lib/libusbmuxd.so.1.0.7 0060f000-0062f000 r-xp 00000000 fd:00 615739 /usr/lib/rhythmbox/plugins/audioscrobbler/libaudioscrobbler.so 0062f000-00630000 r--p 0001f000 fd:00 615739 /usr/lib/rhythmbox/plugins/audioscrobbler/libaudioscrobbler.so 00630000-00631000 rw-p 00020000 fd:00 615739 /usr/lib/rhythmbox/plugins/audioscrobbler/libaudioscrobbler.so 00631000-00635000 r-xp 00000000 fd:00 1048960 /usr/lib/gio/modules/libgiognomeproxy.so 00635000-00636000 r--p 00003000 fd:00 1048960 /usr/lib/gio/modules/libgiognomeproxy.so 00636000-00637000 rw-p 00004000 fd:00 1048960 /usr/lib/gio/modules/libgiognomeproxy.so 08048000-0804d000 r-xp 00000000 fd:00 556904 /usr/bin/rhythmbox 0804d000-0804e000 r--p 00004000 fd:00 556904 /usr/bin/rhythmbox 0804e000-08053000 rw-p 00005000 fd:00 556904 /usr/bin/rhythmbox 08053000-08c32000 rw-p 00000000 00:00 0 [heap] 41000000-4103a000 r-xp 00000000 fd:00 592612 /usr/lib/libmtp.so.9.0.1 4103a000-4103b000 ---p 0003a000 fd:00 592612 /usr/lib/libmtp.so.9.0.1 4103b000-4103d000 r--p 0003a000 fd:00 592612 /usr/lib/libmtp.so.9.0.1 4103d000-41041000 rw-p 0003c000 fd:00 592612 /usr/lib/libmtp.so.9.0.1 41089000-410c7000 r-xp 00000000 fd:00 755650 /lib/libgssapi_krb5.so.2.2 410c7000-410c8000 ---p 0003e000 fd:00 755650 /lib/libgssapi_krb5.so.2.2 410c8000-410c9000 r--p 0003e000 fd:00 755650 /lib/libgssapi_krb5.so.2.2 410c9000-410ca000 rw-p 0003f000 fd:00 755650 /lib/libgssapi_krb5.so.2.2 410cc000-410d5000 r-xp 00000000 fd:00 755623 /lib/libkrb5support.so.0.1 410d5000-410d6000 r--p 00008000 fd:00 755623 /lib/libkrb5support.so.0.1 410d6000-410d7000 rw-p 00009000 fd:00 755623 /lib/libkrb5support.so.0.1 410d9000-41102000 r-xp 00000000 fd:00 755647 /lib/libk5crypto.so.3.1 41102000-41103000 r--p 00029000 fd:00 755647 /lib/libk5crypto.so.3.1 41103000-41104000 rw-p 0002a000 fd:00 755647 /lib/libk5crypto.so.3.1 41106000-4110c000 r-xp 00000000 fd:00 993973 /usr/lib/libnotify.so.4.0.0 4110c000-4110d000 r--p 00005000 fd:00 993973 /usr/lib/libnotify.so.4.0.0 Program received signal SIGABRT, Aborted. [Switching to Thread 0xb2a89b40 (LWP 2704)] 0x00110424 in __kernel_vsyscall () (gdb) thread apply all bt
+ Trace 229264
Thread 1 (Thread 0xb7fc68c0 (LWP 2694))
91 static gboolean load_uri_args (const char **args, GFunc handler, gpointer user_data); 92 static void dbus_load_uri (const char *filename, DBusGProxy *proxy); 93 static void database_load_complete (RBShell *shell, gpointer data); 94 static void local_load_uri (const char *filename, RBShell *shell); 95 96 static void main_shell_weak_ref_cb (gpointer data, GObject *objptr); 97 98 int 99 main (int argc, char **argv) 100 { (gdb)
I'm seeing this too, but I think it only happens with the packaged version - my own builds seem to work OK. I'm suspecting some kind of race condition, since it happens in various different places and with varying symptoms. Sometimes it just crashes, sometimes it hangs and I have to kill it before it'll start properly. valgrind might help, but it might not..
and of course it hasn't happened since I said that.
valgrind doesn't help.
Can this be related? https://bugzilla.redhat.com/show_bug.cgi?id=766352
I have gtk3-3.2.3-1.fc16.i686 here and still occasionally have this problem.
*** Bug 670616 has been marked as a duplicate of this bug. ***
Created attachment 208239 [details] valgrind log part 1 Valgrind log (part 1), taken after restart after the crash in bug 670616. Hope it helps.
Created attachment 208240 [details] valgrind log part 2
Turns out this is a glibc bug that causes strcpy to write past the end of the destination buffer. I replaced the strcpy call with g_strlcpy in commit dae9cb1 and it no longer crashes.
Oh great that you found the reason! http://git.gnome.org/browse/rhythmbox/commit/?id=dae9cb13a7bda14c6f1f4a1ba11fc02ef58b79e2 > Certain versions of glibc have a broken SSE strcpy that writes past > the end of the destination. Is there an upstream bug about that (URL)?
Here's the glibc bug: http://sources.redhat.com/bugzilla/show_bug.cgi?id=13540